# waveshare

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_server.rs  main.rs
src/components/: FilePicker.tsx  ManualFileInput.tsx
